--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
             <canvas id="msg" width="960" height="720" style="display:inline-block"></canvas>
         </div>
         <div>
-            <span id="flagCount">Flag Count: 0</span>
+            <!-- Display flag counts for flag1, flag2, flag3, and flag4 -->
+            <div id="flagCounts">
+                <div id="flagCount1">flag1: 0</div>
+                <div id="flagCount2">flag2: 0</div>
+                <div id="flagCount3">flag3: 0</div>
+                <div id="flagCount4">flag4: 0</div>
+            </div>
         </div>
         <div>
             <input type="number" id="numericData" placeholder="Enter numeric data">
